# GM-Assistant

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYRIGHT  GM-Assistant_win.pro  GMA.rc  MainWindow.ui  README  README.install  changelog  configure  dox.conf  dox.conf.in  fr.free.gmassistant.desktop.in  fr.free.gmassistant.metainfo.xml.in  game.xml  gm-assistant.desktop.src  gm-assistant.entitlements  index.html  install.sh  list.xml  ressource.qrc  style.css  tree.xml  uninstall.sh
doc/: gm-assistant.6
doc/userguide/: tuto.gma  tutorial.gma  userguide.tex
doc/userguide/en/: userguide.tex  userguide.tex.in
doc/userguide/fr/: userguide.tex  userguide.tex.in
examples/: example.gma  game.xml
sources/: Branch.cpp  Branch.h  DiaglogItem.ui  Engine.cpp  Engine.h  Item.cpp  Item.h  ItemDialog.cpp  ItemDialog.h  ItemDialog.ui  ItemFactory.cpp  ItemFactory.h  List.cpp  List.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  QCustomTreeWidget.cpp  QCustomTreeWidget.h  QCustomTreeWidgetItem.cpp  QCustomTreeWidgetItem.h  SoundEngine.cpp  SoundEngine.h  SoundItem.cpp  SoundItem.h  Tree.cpp  Tree.h  Version.cpp  Version.h  main.cpp  version.h
sources/engine/: Branch.cpp  Branch.h  Character.cpp  Character.h  CharacterList.cpp  CharacterList.h  Engine.cpp  Engine.h  FileItem.cpp  FileItem.h  FileMapping.cpp  FileMapping.h  IOConfig.cpp  IOConfig.h  ImageItem.cpp  ImageItem.h  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  Metadata.cpp  Metadata.h  Modification.cpp  Modification.h  Note.cpp  Note.h  PictureItem.cpp  PictureItem.h  PropertyList.cpp  PropertyList.h  QCustomThread.cpp  QCustomThread.h  QSoundEngine.cpp  QSoundEngine.h  Scenario.cpp  Scenario.h  Skill.cpp  Skill.h  SkillList.cpp  SkillList.h  (+10 more)
sources/engine/items/: FileItem.cpp  FileItem.h  ImageItem.cpp  ImageItem.h  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  NoteItem.cpp  NoteItem.h  SoundItem.cpp  SoundItem.h
sources/engine/modifications/: CharacterModification.cpp  CharacterModification.h  MetadataModification.cpp  MetadataModification.h  Modification.cpp  Modification.h  ModificationQueue.cpp  ModificationQueue.h  NoteModification.cpp  NoteModification.h  TreeModification.cpp  TreeModification.h
sources/misc/: FileDetector.cpp  FileDetector.h  QAudioProxyModel.cpp  QAudioProxyModel.h  QSoundEngine.cpp  QSoundEngine.h
sources/widgets/: QCustomHeaderView.cpp  QCustomHeaderView.h  QCustomSlider.cpp  QCustomSlider.h  QCustomTabBar.cpp  QCustomTabBar.h  QCustomTabWidget.cpp  QCustomTabWidget.h  QCustomTableWidget.cpp  QCustomTableWidget.h  QCustomTextEdit.cpp  QCustomTextEdit.h  QCustomTreeWidget.cpp  QCustomTreeWidget.h  QCustomTreeWidgetItem.cpp  QCustomTreeWidgetItem.h
sources/windows/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ChangeCharacterDialog.cpp  ChangeCharacterDialog.h  ChangeCharacterDialog.ui  ChangeHeaderDialog.cpp  ChangeHeaderDialog.h  ChangeHeaderDialog.ui  ChangePropertyDialog.cpp  ChangePropertyDialog.h  ChangePropertyDialog.ui  ChangeSkillDialog.cpp  ChangeSkillDialog.h  ChangeSkillDialog.ui  CombatDialog.cpp  CombatDialog.h  CombatDialog.ui  DiceDialog.cpp  DiceDialog.h  DiceDialog.ui  ImageWindow.cpp  ImageWindow.h  ItemDialog.cpp  ItemDialog.h  ItemDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MetadataDialog.cpp  MetadataDialog.h  MetadataDialog.ui  PictureWindow.cpp  PictureWindow.h  PictureWindow.ui  ReleaseNotesDialog.cpp  ReleaseNotesDialog.h  ReleaseNotesDialog.ui  RenameNoteDialog.cpp  RenameNoteDialog.h  (+4 more)
translations/: gmassistant_en.ts  gmassistant_fr.ts  gmassistant_it.ts  languages
